k8s/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-app
  namespace: mern-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mern-app
  template:
    metadata:
      labels:
        app: mern-app
    spec:
      containers:
        - name: mern-app
          image: dac123/mern-app:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: '256Mi'
              cpu: '100m'
            limits:
              memory: '512Mi'
              cpu: '200m'
---
apiVersion: v1
kind: Service
metadata:
  name: mern-app-service
  namespace: mern-app
spec:
  type: ClusterIP
  selector:
    app: mern-app
  ports:
    - port: 80
      targetPort: 5000
